isVisible,toggle and fixed preference for Console module

--- a/src/styles/brackets_theme_default.less
+++ b/src/styles/brackets_theme_default.less
@@ -387,7 +387,7 @@
 
 .main-view .content {
     right: 200px !important;
-    left: 48px !important;
+    left: 54px !important;
 }
 .main-view #sidebar {
     left: auto;
